Homepage added some content, background & style

--- a/index.html
+++ b/index.html
@@ -2,13 +2,33 @@
 <html>
     <head>
         <meta charset="utf-8">  
-        <title></title>
+        <title>Nicholas' Portfolio Webpage</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
-        
-        <script src="" async defer></script>
+    <nav id=navbar class=navbar>
+        <ul class=navbar>
+            <li><a>Nicholas' Portfolio</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <div id=homepage>
+        <h1 id=hello>Hello!</h1>
+        <h2 id=intro>I am Nicholas Lee</h2>
+        <h3 id=welcome>Welcome to my personal portfolio page</h3>
+    </div>
+    <div id=about-1>
+        <div id=description>
+        <h4>About Me</h4>
+        <p>I am currently a year one student at Ngee Ann Polytechnic pursuing a Diploma in Information Technology. I am passionate in programming.
+        Since young, I had been fascinated by the advances in technology and the convenience that it brings to people. Ever since, I had aspired to become a software engineer one day, and would like to play a part in bringing innovative solutions and positive changes to the world through the use of technology.</p>
+        </div>
+    </div>
+        <script src="script.js" async defer></script>
     </body>
 </html>
