--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">  
         <title>Nicholas' Portfolio Webpage</title>
@@ -9,7 +9,7 @@
     </head>
     <body>
 
-    <nav class=navbar>
+    <nav id="navbar" class=navbar>
             <div class="title">Nicholas' Portfolio</div>
             <div class="navbar-links">
                 <ul>
@@ -17,9 +17,9 @@
                     <li class="internal-links"><a href="#about-1">About</a></li>
                     <li class="internal-links"><a href="#work">Work</a></li>
                     <li class="internal-links"><a href="#contact">Contact</a></li>
-                    <li class="social"><a href="https://www.facebook.com/" target="_blank"><img class="logo" src="Social_fb.jpg"></a></li>
-                    <li class="social"><a href="https://www.linkedin.com/in/wei-jun-nicholas-lee-83198920b/" target="_blank"><img class="logo" src="Social_in.jpg"></a></li>
-                    <li class="social"><a href="https://twitter.com/?lang=en-sg" target="_blank"><img class="logo" src="Social_tt.jpg"></a></li>
+                    <li class="social"><a href="https://www.facebook.com/" target="_blank"><img class="logo" src="pics/Social_fb.jpg"  alt="facebook logo"></a></li>
+                    <li class="social"><a href="https://www.linkedin.com/in/wei-jun-nicholas-lee-83198920b/" target="_blank"><img class="logo" src="pics/Social_in.jpg" alt="linkedin logo"></a></li>
+                    <li class="social"><a href="https://twitter.com/?lang=en-sg" target="_blank" ><img class="logo" src="pics/Social_tt.jpg" alt="twitter logp"></a></li>
                 </ul>
             </div>
     </nav>
@@ -32,7 +32,7 @@
 
     <div id="about-1">
         <div id="potrait">
-            <img class="selfie-1" src="Selfie_1.jpg">
+            <img class="selfie-1" src="pics/Selfie_1.jpg" alt="a potrait of myself">
         </div>
         <div id="description">
         <h4>About Me</h4>
@@ -45,35 +45,36 @@
     <div id="about-2">
         <div class="sections" id="testimonals">
             <h4>Testimonals</h4>
-            <p>"Nicholas displayed a good team spirit and was a dedicated member of the Media Society from 2018 to 2020. Throughout these three years, he contributed regularly to the society's activity and was always ready to carry out tasks assigned to the best of his ability. He showed commitment in perfecting his computing skills in video-scripting and video-editing. Nicholas' strength in resilience and perfection would stand him in good stead with any organisation he joins in the future" 
+            <p id="testimony">"Nicholas displayed a good team spirit and was a dedicated member of the Media Society from 2018 to 2020. Throughout these three years, he contributed regularly to the society's activity and was always ready to carry out tasks assigned to the best of his ability. He showed commitment in perfecting his computing skills in video-scripting and video-editing. Nicholas' strength in resilience and perfection would stand him in good stead with any organisation he joins in the future" 
             </p>
-            <p>~ Mdm Tan Lin</p>
+            <p id="teacher-name">~ Mdm Tan Lin</p>
+            <button id="next">Next ></button>
         </div>
         <div class="sections" id="skills">
             <p></p>
             <h4>Skills</h4>
             <p></p>
-            <div id="html5"> <img src="html5.jpg"> <p>HTML5</p></div>
-            <div id="css"> <img src="css.jpg"> <p>CSS</p></div>
-            <div id="js"> <img src="js.jpg"> <p>JavaScript</p></div>
-            <div id="sql"> <img src="sql.jpg"> <p>SQL</p></div>
-            <div id="cs"> <img src="cs.jpg"> <p>C#</p></div>
-            <div id="py"> <img src="py.jpg"> <p>Python</p></div>
-            <div id="bi"> <img src="bi.jpg"> <p>Power BI</p></div>
-            <div id="ai"> <img src="ai.jpg"> <p>Adobe Illustrator</p></div>
-            <div id="ps"> <img src="ps.jpg"> <p>Adobe Photoshop</p></div>
+            <div id="html5"> <img src="pics/html5.jpg" alt="HTML logo"> <p>HTML5</p></div>
+            <div id="css"> <img src="pics/css.jpg" alt="CSS logo"> <p>CSS</p></div>
+            <div id="js"> <img src="pics/js.jpg" alt="JS logo"> <p>JavaScript</p></div>
+            <div id="sql"> <img src="pics/sql.jpg" alt="SQL logo"> <p>SQL</p></div>
+            <div id="cs"> <img src="pics/cs.jpg" alt="C# logo"> <p>C#</p></div>
+            <div id="py"> <img src="pics/py.jpg" alt="Python logo"> <p>Python</p></div>
+            <div id="bi"> <img src="pics/bi.jpg" alt="Power BI logo"> <p>Power BI</p></div>
+            <div id="ai"> <img src="pics/ai.jpg" alt="Illustrator logo"> <p>Adobe Illustrator</p></div>
+            <div id="ps"> <img src="pics/ps.jpg" alt="Photoshop logo"> <p>Adobe Photoshop</p></div>
         </div>
         <div class="sections" id="schools">
             <h4>My Education</h4>
-            <div id="hws"> <img src="hws.jpg"> </div>
+            <div id="hws"> <img src="pics/hws.jpg" alt="HWS logo"> </div>
             <div><p>Hong Wen School<br>
                 (2011 - 2016)<br>
                 PSLE Certificate</p></div><div></div>
-            <div id="yyss"> <img src="yyss.jpg"> </div>
+            <div id="yyss"> <img src="pics/yyss.jpg" alt="YYSS logo"> </div>
             <div><p>Yuying Secondary School<br> 
                 (2017-2020)<br>
                 GCE'O'-Levels Certificate</p></div><div></div>
-            <div id="np"> <img src="np.jpg"> </div>
+            <div id="np"> <img src="pics/np.jpg" alt="NP logo"> </div>
             <div><p>Ngee Ann Polytechnic<br> 
                 (2021 - 2024)<br>
                 Diploma In Information Technology</p></div><div></div>
@@ -82,37 +83,37 @@
     
     <div id="work">
         <div></div><div id="projects"><h4><u>Projects</u></h4></div><div></div>
-        <div class="projects"><a href="#"><img id="shelf" src="shelf.jpg"></a><p> <strong>Self-Storage Shelf</strong></p></div>
-        <div class="projects"><a href="#"><img id="adware" src="adware.jpg"></a><p> <strong>What is Adware?</strong></p></div>
-        <div class="projects"><a href="#"><img id="dashboard" src="dashboard.jpg"></a><p> <strong>Live Dashboard</strong></p></div>
-        <div class="projects"><a href="#"><img id="transport" src="transport.jpg"></a><p> <strong>Tranport App Icon</strong></p></div>
-        <div class="projects"><a href="#"><img id="sims-city" src="sims-city.jpg"></a><p> <strong>Sims City Mayor</strong></p></div>
-        <div class="projects"><a href="#"><img id="about-me" src="about-me.jpg"></a><p> <strong>About Me Webpage</strong></p></div>
+        <div class="projects"><a href="https://masterzy1234.wixsite.com/project-website" target="_blank"><img id="shelf" src="pics/shelf.jpg" alt="shelf prototype picture"></a><p> <strong>Self-Storage Shelf</strong></p></div>
+        <div class="projects"><a href="https://csfassignmentad.wixsite.com/adware-team5" target="_blank"><img id="adware" src="pics/adware.jpg" alt="Adware picture"></a><p> <strong>What is Adware?</strong></p></div>
+        <div class="projects"><a href="https://app.powerbi.com/groups/me/dashboards/6ff380a9-eea1-4ede-8714-392724ec40be" target="_blank"><img id="dashboard" src="pics/dashboard.jpg" alt="Dashboard screenshot"></a><p> <strong>Live Dashboard</strong></p></div>
+        <div class="projects"><a href="https://www.lta.gov.sg/content/ltagov/en/map/bus.html" target="_blank"><img id="transport" src="pics/transport.jpg" alt="My Transport App picture"></a><p> <strong>Tranport App Icon</strong></p></div>
+        <div class="projects"><a href="https://replit.com/@LWJNicholas/PRG1-ASG-Final#main.py" target="_blank"><img id="sims-city" src="pics/sims-city.jpg" alt="screenshot of simp-city programme"></a><p> <strong>Simp City Mayor</strong></p></div>
+        <div class="projects"><a href="Wk03-about-me/AboutMe.html" target="_blank"><img id="about-me" src="pics/about-me.jpg" alt="sreenshot of About-Me webpage"></a><p> <strong>About Me Webpage</strong></p></div>
     </div>
 
     <div id="contact">
-        <form id="message">
+        <form id="message" action="thankyou-page/thank-you.html">
             <h4><strong>Leave Me A Message</strong></h4>
             <div id="form">
             <div class="field">
             <p>Name</p>
-            <input type="text" placeholder="Name">
+            <input type="text" placeholder="Name" label="name" required>
             </div>
             <div class="field">
             <p>Phone</p>
-            <input type="phone" placeholder="Phone Number">
+            <input type="tel" placeholder="Phone Number" label="phone">
             </div>
             <div class="field">
             <p>Email</p>
-            <input type="email" placeholder="Email">
+            <input type="email" placeholder="Email" id="email" label="email" required>
             </div>
             <div class="field">
             <p>Message</p>
-            <textarea placeholder="Type your message here..." rows="5" cols="70"></textarea>
+            <textarea placeholder="Type your message here..." rows="5" cols="60" label="message" required></textarea>
             </div>
         </div>
         <input id="submitbtn" type="submit" value="Submit">
-    </form>
+        </form>
         <hr>
         <div id="info">
             <h4><strong>Lets Connect</strong></h4>
@@ -121,12 +122,17 @@
                 <li>My Phone: +65 87654321</li>
                 <li>My Email: s10222425@connect.np.edu.sg</li>
             </ul>
-            <button id="email-me" label="Email Me">Email Me</button>
+            <a href="mailto:s10222425@connect.np.edu.sg"  onclick="tyMessage()"><button id="email-me" type="button">Email Me</button></a>
         </div>
     </div>
-
-    <footer>
-
+    <footer id="footer">
+        <a href="https://www.linkedin.com/in/wei-jun-nicholas-lee-83198920b/"><img src="pics/color-in-logo.jpg" alt="linkedin logo"></a>
+        <ul>
+            <li>Addr: 535 Clementi Rd, Singapore 599489</li>
+            <li>Email: S10222425@connect.np.edu.sg</li>
+            <li>Tel: +65 8765 4321</li>
+            <li>&copy;2021 Created by Lee Wei Jun Nicholas</li>
+        </ul>
     </footer>
         <script src="script.js" async defer></script>
     </body>
