Final (no vid yet)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h4>Testimonals</h4>
             <p id="testimony">"Nicholas displayed a good team spirit and was a dedicated member of the Media Society from 2018 to 2020. Throughout these three years, he contributed regularly to the society's activity and was always ready to carry out tasks assigned to the best of his ability. He showed commitment in perfecting his computing skills in video-scripting and video-editing. Nicholas' strength in resilience and perfection would stand him in good stead with any organisation he joins in the future" 
             </p>
-            <p id="teacher-name">~ Mdm Tan Lin</p>
+            <p id="teacher-name">~ Mdm Tan</p>
             <button id="next">Next ></button>
         </div>
         <div class="sections" id="skills">
@@ -126,7 +126,7 @@
         </div>
     </div>
     <footer id="footer">
-        <a href="https://www.linkedin.com/in/wei-jun-nicholas-lee-83198920b/"><img src="pics/color-in-logo.jpg" alt="linkedin logo"></a>
+        <a href="https://www.linkedin.com/in/wei-jun-nicholas-lee-83198920b/" target="_blank"><img src="pics/color-in-logo.jpg" alt="linkedin logo"></a>
         <ul>
             <li>Addr: 535 Clementi Rd, Singapore 599489</li>
             <li>Email: S10222425@connect.np.edu.sg</li>
@@ -134,6 +134,6 @@
             <li>&copy;2021 Created by Lee Wei Jun Nicholas</li>
         </ul>
     </footer>
-        <script src="script.js" async defer></script>
+        <script src="script.js" defer></script>
     </body>
 </html>
